--- a/templates/index.html
+++ b/templates/index.html
@@ -7,4 +7,11 @@
 <p>Click <a href="/logout">here</a> to logout.</p>
     {% endif %}
 <br>
+    <h3>Posts:</h3>
+{% for post in posts %}
+  <strong>Title:</strong> {{ post.title }} <br>
+  <strong>Post:</strong> {{ post.description }} <br>
+<br>
+{% endfor %}
+
 {% endblock %}
