--- a/project/users/templates/login.html
+++ b/project/users/templates/login.html
@@ -4,7 +4,7 @@
 
 <h1>Please login</h1>
 <br>
-<form class="form-signin" method="post" action="{{ url_for('login') }}">
+<form class="form-signin" method="post" action="">
     username: <input type="text" name="username">
     password: <input type="password" name="password">
   <button class="btn btn-sm btn-success" type="submit">Sign in</button>
