--- a/project/home/templates/index.html
+++ b/project/home/templates/index.html
@@ -6,6 +6,9 @@
 <p>Click <a href="/logout">here</a> to logout.</p>
 <br>
 
+<!-- url for user homepage -->
+    <a href="/{{ user }}">{{ user }} homepage</a>
+
 <!-- post form -->
 <h3>Add a Post!</h3>
 <br>
