--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask Intro</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="{{ url_for('static', filename="bootstrap.css") }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename="bootstrap.js") }}" rel="stylesheet">
   </head>
   <body>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <!-- child template -->
       {% block content %}{% endblock %}
@@ -25,3 +26,4 @@
 
   </body>
 </html>
+
