--- a/project/home/templates/index.html
+++ b/project/home/templates/index.html
@@ -7,8 +7,13 @@
 <br>
 
 <!-- url for user homepage -->
-    <a href="/{{ user }}">{{ user }} homepage</a>
+    <a href="/{{ user }}">{{ user }} homepage</a><br>
 
+
+<!-- url for admin manage page -->
+    {% if admin %}
+    <a href="/admin">Sir manage your app</a><br>
+    {% endif %}
 <!-- post form -->
 <h3>Add a Post!</h3>
 <br>
