--- a/project/home/templates/index.html
+++ b/project/home/templates/index.html
@@ -1,54 +1,46 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Welcome to Flask!</h1>
-<br>
-<p>Click <a href="/logout">here</a> to logout.</p>
-<br>
+<div class="container-narrow">
+    <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="/register">Sign up</a></li>
+        <li><a href="/login">Sign in</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <h3 class="text-muted">RealU</h3>
+    <hr>
+    <div class="jumbotron">
+        <h1>Super awesome marketing speak!</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <a class="btn btn-large btn-success" href="#">Sign up today</a>
+    </div>
+    <div class="row marketing">
+        <div class="col-md-6"><h4>Subheading</h4>
+            <p>Donec id elit n mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-<!-- url for user homepage -->
-    <a href="/{{ user }}">{{ user }} homepage</a><br>
+            <h4>Subheading</h4>
+            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
+            <h4>Subheading</h4>
+            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
 
-<!-- url for admin manage page -->
-    {% if admin %}
-    <a href="/admin">Sir manage your app</a><br>
-    {% endif %}
-<!-- post form -->
-<h3>Add a Post!</h3>
-<br>
-<form class="form-message" role="form" method="post" action="/">
-  {{ form.csrf_token }}
-  <p>
-    {{ form.title(placeholder="title") }}
-    <span class="error">
-      {% if form.title.errors %}
-        {% for error in form.title.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <p>
-  {{ form.description(placeholder="description") }}
-    <span class="error">
-      {% if form.description.errors %}
-        {% for error in form.description.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <button class="btn btn-sm btn-success" type="submit">Post</button>
-</form>
+        <div class="col-md-6">
+            <h4>Subheading</h4>
+            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-<!-- All posts -->
-<h3>Posts:</h3>
-{% for post in posts %}
-  <strong>Title:</strong> {{ post.title }} <br>
-  <strong>Post:</strong> {{ post.description }} <br>
-  <strong>Author:</strong> {{ post.author.name }} <br>
-<br>
-{% endfor %}
+            <h4>Subheading</h4>
+            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+            <h4>Subheading</h4>
+            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; Company 2013</p>
+    </div>
+</div>
 
 {% endblock %}
