--- a/project/users/templates/login.html
+++ b/project/users/templates/login.html
@@ -2,31 +2,33 @@
 
 {% block content %}
 
-<h1>Please login</h1>
-<br>
-<form class="form-signin" role="form" method="post" action="">
-  {{ form.csrf_token }}
-  <p>
-    {{ form.username(placeholder="username") }}
-    <span class="error">
-      {% if form.username.errors %}
-        {% for error in form.username.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <p>
-  {{ form.password(placeholder="password") }}
-    <span class="error">
-      {% if form.password.errors %}
-        {% for error in form.password.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <button class="btn btn-sm btn-success" type="submit">Sign in</button>
-</form>
+    <div class="col-md-4 col-md-offset-4">
+    <h1>Please login</h1>
+    <br>
+    <form class="form-signin" role="form" method="post" action="">
+    {{ form.csrf_token }}
+    <p>
+        {{ form.username(placeholder="username") }}
+        <span class="error">
+        {% if form.username.errors %}
+            {% for error in form.username.errors %}
+            {{ error }}
+            {% endfor %}
+        {% endif %}
+        </span>
+    </p>
+    <p>
+    {{ form.password(placeholder="password") }}
+        <span class="error">
+        {% if form.password.errors %}
+            {% for error in form.password.errors %}
+            {{ error }}
+            {% endfor %}
+        {% endif %}
+        </span>
+    </p>
+    <button class="btn btn-sm btn-success" type="submit">Sign in</button>
+    </form>
+    </div>
 {% endblock %}
 
