--- a/project/home/templates/index.html
+++ b/project/home/templates/index.html
@@ -5,14 +5,12 @@
     <ul class="nav nav-pills pull-right">
         <li class="active"><a href="/register">Sign up</a></li>
         <li><a href="/login">Sign in</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
     </ul>
     <h3 class="text-muted">RealU</h3>
     <hr>
     <div class="jumbotron">
-        <h1>Super awesome marketing speak!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <h1>Be yourself and create future!</h1>
+        <p class="lead">Thousands of people wants to find the place to show themselves and there it is!</p>
         <a class="btn btn-large btn-success" href="#">Sign up today</a>
     </div>
     <div class="row marketing">
@@ -39,7 +37,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; Company 2013</p>
+        <p>&copy; Company RealU</p>
     </div>
 </div>
 
