--- a/project/templates/admin/index.html
+++ b/project/templates/admin/index.html
@@ -1,5 +1,18 @@
+{% if session.admin %}
 {% extends 'admin/master.html' %}
 
 {% block body %}
-  <p>Hello world</p>
+  <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="/YourFile">Home</a></li>
+    </ul>
+    <h3 class="text-muted">RealU</h3>
 {% endblock %}
+{% else %}
+    {% extends "base.html" %}
+    {% block content %}
+    <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="/YourFile">Home</a></li>
+    </ul>
+    <h3 class="text-muted">RealU</h3>
+    {% endblock %}
+{% endif %}
