--- a/project/users/templates/login.html
+++ b/project/users/templates/login.html
@@ -1,14 +1,12 @@
-{% extends "base.html" %}
+{% extends "user_log.html" %}
 
-{% block content %}
+{% block user_log %}
 
-    <div class="col-md-4 col-md-offset-4">
-    <h1>Please login</h1>
-    <br>
     <form class="form-signin" role="form" method="post" action="">
+    <h2 class="form-signin-heading">Please sign in</h2>
     {{ form.csrf_token }}
-    <p>
-        {{ form.username(placeholder="username") }}
+        <label for="inputName" class="sr-only">Username</label>
+        {{ form.username(placeholder="Username", class="form-control", autofocus="") }}
         <span class="error">
         {% if form.username.errors %}
             {% for error in form.username.errors %}
@@ -16,9 +14,8 @@
             {% endfor %}
         {% endif %}
         </span>
-    </p>
-    <p>
-    {{ form.password(placeholder="password") }}
+        <label for="inputPassword" class="sr-only">Password</label>
+        {{ form.password(class="form-control", placeholder="Password") }}
         <span class="error">
         {% if form.password.errors %}
             {% for error in form.password.errors %}
@@ -26,9 +23,8 @@
             {% endfor %}
         {% endif %}
         </span>
-    </p>
-    <button class="btn btn-sm btn-success" type="submit">Sign in</button>
+    <br>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
-    </div>
 {% endblock %}
 
