--- a/project/users/templates/register.html
+++ b/project/users/templates/register.html
@@ -1,52 +1,53 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-<h1>Please Register</h1>
-<br>
-<form class="form-signin" role="form" method="post" action="">
-  {{ form.csrf_token }}
-  <p>
-    {{ form.username(placeholder="username") }}
-    <span class="error">
-      {% if form.username.errors %}
-        {% for error in form.username.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <p>
-  {{ form.email(placeholder="email") }}
-    <span class="error">
-      {% if form.email.errors %}
-        {% for error in form.email.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <p>
-  {{ form.password(placeholder="password") }}
-    <span class="error">
-      {% if form.password.errors %}
-        {% for error in form.password.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <p>
-  {{ form.confirm(placeholder="confirm") }}
-    <span class="error">
-      {% if form.confirm.errors %}
-        {% for error in form.confirm.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
-  </p>
-  <button class="btn btn-sm btn-success" type="submit">Register!</button>
-</form>
-
+{% extends "user_log.html" %}
+{% block user_log %}
+    <form class="form-signin" role="form" method="post" action="">
+      {{ form.csrf_token }}
+        <h2 class="form-signin-heading">Please sign up</h2>
+      <p>
+        <label for="inputName" class="sr-only">Username</label>
+        {{ form.username(placeholder="Username", class="form-control", autofocus="") }}
+        <span class="error">
+          {% if form.username.errors %}
+            {% for error in form.username.errors %}
+              {{ error }}
+            {% endfor %}
+          {% endif %}
+        </span>
+      </p>
+      <p>
+      <label for="inputEmail" class="sr-only">Email</label>
+      {{ form.email(placeholder="Email", class="form-control") }}
+        <span class="error">
+          {% if form.email.errors %}
+            {% for error in form.email.errors %}
+              {{ error }}
+            {% endfor %}
+          {% endif %}
+        </span>
+      </p>
+      <p>
+      <label for="inputPassword" class="sr-only">Password</label>
+      {{ form.password(placeholder="Password", class="form-control") }}
+        <span class="error">
+          {% if form.password.errors %}
+            {% for error in form.password.errors %}
+              {{ error }}
+            {% endfor %}
+          {% endif %}
+        </span>
+      </p>
+      <p>
+      <label for="inputConfirm" class="sr-only">Confirm</label>
+      {{ form.confirm(placeholder="Confirm", class="form-control") }}
+        <span class="error">
+          {% if form.confirm.errors %}
+            {% for error in form.confirm.errors %}
+              {{ error }}
+            {% endfor %}
+          {% endif %}
+        </span>
+      </p>
+      <br>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Register!</button>
+    </form>
 {% endblock %}
