--- a/project/users/templates/login.html
+++ b/project/users/templates/login.html
@@ -23,6 +23,9 @@
             {% endfor %}
         {% endif %}
         </span>
+        {% if error %}
+        <b>{{ error }}</b>
+        {% endif %}
     <br>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
