sign up today clickable

--- a/project/home/templates/index.html
+++ b/project/home/templates/index.html
@@ -11,7 +11,7 @@
     <div class="jumbotron">
         <h1>Be yourself and create future!</h1>
         <p class="lead">Thousands of people wants to find the place to show themselves and there it is!</p>
-        <a class="btn btn-large btn-success" href="#">Sign up today</a>
+        <a class="btn btn-large btn-success" href="/register">Sign up today</a>
     </div>
     <div class="row marketing">
         <div class="col-md-6"><h4>Subheading</h4>
