--- a/project/users/templates/user_base.html
+++ b/project/users/templates/user_base.html
@@ -11,7 +11,7 @@
         </a>
             <ul class="dropdown-menu">
                 <li><a href="/settings/profile">Your profile</a></li>
-                <li><a href="#">Your stars</a></li>
+                <li><a href="/settings/follow">Your following</a></li>
                 <li><a href="#">Your account</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/settings/setting">Settings</a></li>
