--- a/project/settings/templates/profile.html
+++ b/project/settings/templates/profile.html
@@ -4,11 +4,11 @@
     <form class="form-signin" role="form" method="post" action="">
     <h3>输入个人介绍</h3>
     {{ form.csrf_token }}
-    <label for="introduction" class="sr-only">输入个人介绍</label>
-        {{ form.introduction(class="form-control", placeholder="") }}
+    <label for="about_me" class="sr-only">输入个人介绍</label>
+        {{ form.about_me(class="form-control", placeholder="") }}
         <span class="error">
-        {% if form.introduction.errors %}
-            {% for error in form.introduction.errors %}
+        {% if form.about_me.errors %}
+            {% for error in form.about_me.errors %}
             {{ error }}
             {% endfor %}
         {% endif %}
