--- a/project/templates/admin/index.html
+++ b/project/templates/admin/index.html
@@ -3,7 +3,7 @@
 
 {% block body %}
   <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="/YourFile">Home</a></li>
+        <li class="active"><a href="{{ url_for('users.user_homepage', username=current_user.name) }}">Home</a></li>
     </ul>
     <h3 class="text-muted">RealU</h3>
 {% endblock %}
@@ -11,7 +11,7 @@
     {% extends "base.html" %}
     {% block content %}
     <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="/YourFile">Home</a></li>
+        <li class="active"><a href="{{ url_for('users.user_homepage', username=current_user.name) }}">Home</a></li>
     </ul>
     <h3 class="text-muted">RealU</h3>
     {% endblock %}
