--- a/project/users/templates/user_base.html
+++ b/project/users/templates/user_base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <ul class="nav nav-pills pull-right">
-        <li><a href="/YourFile">Home</a></li>
+        <li><a href="{{ url_for('users.user_homepage', username=current_user.name) }}">Home</a></li>
         {% if user.admin %}
         <li><a href="/admin">Admin</a></li>
         {% endif %}
@@ -10,16 +10,16 @@
         Settings <span class="caret"></span>
         </a>
             <ul class="dropdown-menu">
-                <li><a href="/settings/profile">Your profile</a></li>
-                <li><a href="/settings/follow">Your following</a></li>
+                <li><a href="{{ url_for('settings.profile') }}">Your profile</a></li>
+                <li><a href="{{ url_for('settings.follow', username=user.name) }}">Your following</a></li>
                 <li><a href="#">Your account</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/settings/setting">Settings</a></li>
+                <li><a href="{{ url_for('settings.settings') }}">Settings</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Forum</a></li>
             </ul>
         </li>
-        <li><a href="/logout">Logout</a></li>
+        <li><a href="{{ url_for('users.logout') }}">Logout</a></li>
     </ul>
     <h3 class="text-muted">RealU</h3>
     <hr>
