--- a/project/home/templates/index.html
+++ b/project/home/templates/index.html
@@ -3,15 +3,17 @@
 
 <div class="container-narrow">
     <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="/register">Sign up</a></li>
-        <li><a href="/login">Sign in</a></li>
+        <li class="active"><a href="/register">注册</a></li>
+        <li><a href="/login">登陆</a></li>
     </ul>
     <h3 class="text-muted">RealU</h3>
     <hr>
     <div class="jumbotron">
-        <h1>Be yourself and create future!</h1>
-        <p class="lead">Thousands of people wants to find the place to show themselves and there it is!</p>
-        <a class="btn btn-large btn-success" href="/register">Sign up today</a>
+        <h1>找到最真实的自己</h1>
+        <br>
+        <p class="lead">在这里，你可以找到潜在的就业，实习，科研机会，和成千上万的追梦者共享一个平台！</p>
+        <br>
+        <a class="btn btn-large btn-success" href="/register">加入我们</a>
     </div>
     <div class="row marketing">
         
