--- a/project/users/templates/register.html
+++ b/project/users/templates/register.html
@@ -1,5 +1,10 @@
 {% extends "user_log.html" %}
 {% block user_log %}
+    <ul class="nav nav-pills pull-right">
+        <li><a href="{{ url_for('home.home') }}">返回</a></li>
+    </ul>
+    <h3 class="text-muted">RealU</h3>
+    <hr>
     <form class="form-signin" role="form" method="post" action="">
       {{ form.csrf_token }}
         <h2 class="form-signin-heading">Please sign up</h2>
@@ -47,7 +52,8 @@
           {% endif %}
         </span>
       </p>
+        {% if error %}{{ error }}{% endif %}
       <br>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Register!</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">注册!</button>
     </form>
 {% endblock %}
