--- a/project/users/templates/user_base.html
+++ b/project/users/templates/user_base.html
@@ -2,7 +2,7 @@
 {% block content %}
     <ul class="nav nav-pills pull-right">
         <li><a href="{{ url_for('users.user_homepage', username=current_user.name) }}">Home</a></li>
-        {% if user.admin %}
+        {% if current_user.admin %}
         <li><a href="/admin">Admin</a></li>
         {% endif %}
         <li role="presentation" class="dropdown">
@@ -11,7 +11,7 @@
         </a>
             <ul class="dropdown-menu">
                 <li><a href="{{ url_for('settings.profile') }}">Your profile</a></li>
-                <li><a href="{{ url_for('settings.follow', username=user.name) }}">Your following</a></li>
+                <li><a href="{{ url_for('settings.follow', username=current_user.name) }}">Your following</a></li>
                 <li><a href="#">Your account</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="{{ url_for('settings.settings') }}">Settings</a></li>
@@ -19,6 +19,7 @@
                 <li><a href="#">Forum</a></li>
             </ul>
         </li>
+        <li><a href="{{ url_for("users.friends") }}">Friends</a></li>
         <li><a href="{{ url_for('users.logout') }}">Logout</a></li>
     </ul>
     <h3 class="text-muted">RealU</h3>
